Styling it with a bit of CSS

--- a/index.html
+++ b/index.html
@@ -1,25 +1,36 @@
 <!DOCTYPE html>
 <html>
 <head>
-    RiceOnly
+    <link rel="stylesheet" type="text/css" href="styles/nav.css">
 </head>
 <body>
     <div class="main-body">
-        <div class="top-nav">
-            <a class="nav-button" title="Home"></a>
-            <a class="nav-button">About me</a>
-            <a class="nav-button">Resume</a>
-            <a class="nav-button">Lifestyle</a>
-            <a class="nav-button">Contact</a>
-        </div>
+        <div class=body-wrapper>
+            <div class="nav-wrapper">
+                <div class="top-left-nav">
+                    <a class="home" href="/riceonly/" title="Home">Logo</a>
+                </div>
+                <div class="top-right-nav">
+                    <a class="about" href="">About</a>
+                    <a class="resume" href="">Resume</a>
+                    <a class="lifestyle" href="">Lifestyle</a>
+                    <a class="contact" href="">Contact</a>
+                </div>
+            </div>
 
-        <div>
-            <img src="/img/Aaron_circle.jpg" alt="Aaron"> 
-            <h2>Aaron Liu</h2>
-            <h3>Published on Mar 03, 2018</h2>
-            <p>
-                I like to understand and apply what I know.
-            </p>
+            <div class="bio-wrapper">
+                <div class="bio-image">
+                    <img src="img/Aaron_circle.jpg" alt="Aaron" style="width:500px;height:300px;">
+                    <h2>Aaron Liu</h2>
+                    <h3>Published on Mar 25, 2018</h2>
+                </div>
+
+                <div class="bio">
+                    <p>
+                        I like to understand and apply what I know.
+                    </p>
+                </div>
+            </div>
         </div>
     </div>
 </body>
